Ant build: Specify "--add-opens" to avoid byte-buddy complaining on newer JDKs
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1907109 13f79535-47bb-0310-9956-ffa450edef68